--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Image Generator</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
+        <header class="header">
+          <div class="logo-wrapper">
+            <div class="logo">
+               <i class="fa-solid fa-wand-magic-sparkles"></i>
+            </div>
+            <h1>AI Image Generator</h1>
+        </div>
+
+         <button class="theme-toggle">
+            <i class="fa-solid fa-moon"></i>
+         </button>
+        </header>
+        
+        <div class="main-content">
+            <form action="#" class="promt-form">
+              <div class="prompt-container">
+                <textarea class="promt-input" placeholder="Describe your imagination in detail..." required autofocus></textarea>
+              </div>  
+            </form>
+        </div>
+
     </div>
 </body>
 </html>
