--- a/index.html
+++ b/index.html
@@ -26,10 +26,53 @@
             <form action="#" class="promt-form">
               <div class="prompt-container">
                 <textarea class="promt-input" placeholder="Describe your imagination in detail..." required autofocus></textarea>
+                <button type="button" class="prompt-button">
+                    <i class="fa-solid fa-dice"></i>
+                 </button>
               </div>  
+
+            <div class="prompt-actions">
+                <div class="select-wrapper">
+                <select class="custom-select" required>
+                    <option value="" selected disabled>Select Model</option>
+                    <option value="black-forest-labs/FLUX.1-dev">FLUX.1-dev</option>
+                    <option value="black-forest-labs/FLUX.1-schnell">
+                        FLUX.1-schnell</option>
+                    <option value="stabilityai/stable-diffusion-xl-base-1.0">
+                        Stable Diffusion XL</option>
+                        <option value="runwayml/stable-diffusion-v1-5">
+                            Stable Diffusion v1.5</option>
+                            <option value="prompthero/openjourney">Openjourney</option>
+                </select>
+            </div>
+
+            <div class="select-wrapper">
+                <select class="custom-select" required>
+                  <option value="" selected disabled>Image Count</option>
+                  <option value="1">1 Image</option>
+                  <option value="2">2 Image</option>
+                  <option value="3">3 Image</option>
+                  <option value="4">4 Image</option>
+                  <option value="5">5 Image</option>
+                </select>
+            </div>
+
+            <div class="select-wrapper">
+                <select class="custom-select" required>
+                  <option value="" selected disabled>Aspect Ratio</option>
+                  <option value="1/1">Square (1:1)</option>
+                  <option value="16/9">Landscape (16:9)</option>
+                  <option value="9/16">Portrait (9:16)</option>
+                </select>
+            </div>
+        
+            <button  type="submit" class="generate-btn">
+              <i class="fa-solid fa-wand-sparkles"></i>
+              Generate
+            </button>
+        </div>
             </form>
         </div>
-
     </div>
 </body>
 </html>
