--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <form action="#" class="promt-form">
               <div class="prompt-container">
                 <textarea class="promt-input" placeholder="Describe your imagination in detail..." required autofocus></textarea>
-                <button type="button" class="prompt-button">
+                <button type="button" class="prompt-btn">
                     <i class="fa-solid fa-dice"></i>
                  </button>
               </div>  
 
             <div class="prompt-actions">
-                <div class="select-wrapper">
+             <div class="select-wrapper">
                 <select class="custom-select" required>
                     <option value="" selected disabled>Select Model</option>
                     <option value="black-forest-labs/FLUX.1-dev">FLUX.1-dev</option>
@@ -50,10 +50,10 @@
                 <select class="custom-select" required>
                   <option value="" selected disabled>Image Count</option>
                   <option value="1">1 Image</option>
-                  <option value="2">2 Image</option>
-                  <option value="3">3 Image</option>
-                  <option value="4">4 Image</option>
-                  <option value="5">5 Image</option>
+                  <option value="2">2 Images</option>
+                  <option value="3">3 Images</option>
+                  <option value="4">4 Images</option>
+                  <option value="5">5 Images</option>
                 </select>
             </div>
 
