--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="main-content">
             <form action="#" class="promt-form">
               <div class="prompt-container">
-                <textarea class="promt-input" placeholder="Describe your imagination in detail..." required autofocus></textarea>
+                <textarea class="prompt-input" placeholder="Describe your imagination in detail..." required autofocus></textarea>
                 <button type="button" class="prompt-btn">
                     <i class="fa-solid fa-dice"></i>
                  </button>
