--- a/index.html
+++ b/index.html
@@ -71,6 +71,39 @@
               Generate
             </button>
         </div>
+
+        <div class="gallery-grid">
+          <div class="img-card">
+            <div class="ig-card">
+              <img src="test.png" class="result-img"> 
+              <div class="img-overlay">
+                <button class="img-download-btn">
+                 <i class="fa-solid fa-download"></i>  
+                </button>
+              </div>               
+            </div>
+          </div>
+          <div class="img-card">
+            <div class="ig-card">
+              <img src="test.png" class="result-img"> 
+              <div class="img-overlay">
+                <button class="img-download-btn">
+                 <i class="fa-solid fa-download"></i>  
+                </button>
+              </div>               
+            </div>
+          </div>  
+          <div class="img-card">
+            <div class="ig-card">
+              <img src="test.png" class="result-img"> 
+              <div class="img-overlay">
+                <button class="img-download-btn">
+                 <i class="fa-solid fa-download"></i>  
+                </button>
+              </div>               
+            </div>
+          </div>  
+        </div>
             </form>
         </div>
     </div>
