--- a/index.html
+++ b/index.html
@@ -102,7 +102,17 @@
                 </button>
               </div>               
             </div>
-          </div>  
+          </div> 
+          <div class="img-card">
+            <div class="ig-card">
+              <img src="test.png" class="result-img"> 
+              <div class="img-overlay">
+                <button class="img-download-btn">
+                 <i class="fa-solid fa-download"></i>  
+                </button>
+              </div>               
+            </div>
+          </div> 
         </div>
             </form>
         </div>
