--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
           <div class="img-card loading">
             <div class="status-container">
               <div class="spinner"></div>
+              <i class="fa-solid
+              fa-triangle-exclamation"></i>
               <p class="status-text">Generating...</p>  
             </div>
               <img src="test.png" class="result-img"> 
