--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="prompt-actions">
              <div class="select-wrapper">
-                <select class="custom-select" required>
+                <select class="custom-select" id="model-select" required>
                     <option value="" selected disabled>Select Model</option>
                     <option value="black-forest-labs/FLUX.1-dev">FLUX.1-dev</option>
                     <option value="black-forest-labs/FLUX.1-schnell">
@@ -47,7 +47,7 @@
             </div>
 
             <div class="select-wrapper">
-                <select class="custom-select" required>
+                <select class="custom-select" id="count-select"  required>
                   <option value="" selected disabled>Image Count</option>
                   <option value="1">1 Image</option>
                   <option value="2">2 Images</option>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="select-wrapper">
-                <select class="custom-select" required>
+                <select class="custom-select" id="ratio-select"  required>
                   <option value="" selected disabled>Aspect Ratio</option>
                   <option value="1/1">Square (1:1)</option>
                   <option value="16/9">Landscape (16:9)</option>
@@ -73,7 +73,7 @@
         </div>
 
         <div class="gallery-grid">
-          <div class="img-card loading">
+        <!---- <div class="img-card loading">
             <div class="status-container">
               <div class="spinner"></div>
               <i class="fa-solid
@@ -86,32 +86,9 @@
                  <i class="fa-solid fa-download"></i>  
                 </button>
               </div>               
-          </div>
-          <div class="img-card">
-              <img src="test.png" class="result-img"> 
-              <div class="img-overlay">
-                <button class="img-download-btn">
-                 <i class="fa-solid fa-download"></i>  
-                </button>
-              </div>               
-          </div>  
-          <div class="img-card">
-              <img src="test.png" class="result-img"> 
-              <div class="img-overlay">
-                <button class="img-download-btn">
-                 <i class="fa-solid fa-download"></i>  
-                </button>
-              </div>               
-          </div> 
-          <div class="img-card">
-              <img src="test.png" class="result-img"> 
-              <div class="img-overlay">
-                <button class="img-download-btn">
-                 <i class="fa-solid fa-download"></i>  
-                </button>
-              </div>               
-          </div> 
+          </div> -->
         </div>
+
             </form>
         </div>
     </div>
