--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         
         <div class="main-content">
-            <form action="#" class="promt-form">
+            <form action="#" class="prompt-form">
               <div class="prompt-container">
                 <textarea class="prompt-input" placeholder="Describe your imagination in detail..." required autofocus></textarea>
                 <button type="button" class="prompt-btn">
